--- a/src/App_2010.vcxproj.filters
+++ b/src/App_2010.vcxproj.filters
@@ -9,46 +9,40 @@
       <UniqueIdentifier>{2c3d4c8c-5d1a-459a-a05a-a4e4b608a44e}</UniqueIdentifier>
       <Extensions>fx;fxh;hlsl</Extensions>
     </Filter>
-    <Filter Include="boilerplate">
+    <Filter Include="framework">
       <UniqueIdentifier>{b8b29063-fd01-48ff-8779-c7494b9387c6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="boilerplate\entity">
+    <Filter Include="framework\entity">
       <UniqueIdentifier>{556f3e13-216d-448d-9b3d-0d6ffdebc329}</UniqueIdentifier>
     </Filter>
-    <Filter Include="boilerplate\entity\shape">
+    <Filter Include="framework\entity\shape">
       <UniqueIdentifier>{bee95eac-ea57-403e-bff3-568b5e87f236}</UniqueIdentifier>
     </Filter>
-    <Filter Include="boilerplate\render">
+    <Filter Include="framework\render">
       <UniqueIdentifier>{03626652-95a8-4226-acad-123ff012f4bc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="boilerplate\window">
+    <Filter Include="framework\window">
       <UniqueIdentifier>{66c3323c-ca58-43df-9d89-92131e466582}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="framework\utils">
+      <UniqueIdentifier>{2089627c-cd5c-4715-9db6-1c3408ae3858}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="fcolor.cpp">
-      <Filter>boilerplate\render</Filter>
+      <Filter>framework\render</Filter>
     </ClCompile>
     <ClCompile Include="App.cpp" />
-    <ClCompile Include="cycloid.cpp">
-      <Filter>boilerplate\entity\shape</Filter>
-    </ClCompile>
-    <ClCompile Include="quad.cpp">
-      <Filter>boilerplate\entity\shape</Filter>
-    </ClCompile>
     <ClCompile Include="shape.cpp">
-      <Filter>boilerplate\entity\shape</Filter>
-    </ClCompile>
-    <ClCompile Include="heart.cpp">
-      <Filter>boilerplate\entity</Filter>
-    </ClCompile>
-    <ClCompile Include="tree.cpp">
-      <Filter>boilerplate\entity</Filter>
+      <Filter>framework\entity\shape</Filter>
     </ClCompile>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="tree.cpp" />
     <ClCompile Include="window.cpp">
-      <Filter>boilerplate\window</Filter>
+      <Filter>framework\window</Filter>
+    </ClCompile>
+    <ClCompile Include="quad.cpp">
+      <Filter>framework\entity\shape</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -61,34 +55,28 @@
       <Filter>Resource Files</Filter>
     </CLInclude>
     <ClInclude Include="fcolor.h">
-      <Filter>boilerplate\render</Filter>
+      <Filter>framework\render</Filter>
     </ClInclude>
     <ClInclude Include="constant_buffer.h">
-      <Filter>boilerplate\render</Filter>
+      <Filter>framework\render</Filter>
     </ClInclude>
     <ClInclude Include="simple_vertex.h">
-      <Filter>boilerplate\render</Filter>
+      <Filter>framework\render</Filter>
     </ClInclude>
     <ClInclude Include="entity.h">
-      <Filter>boilerplate\entity</Filter>
+      <Filter>framework\entity</Filter>
     </ClInclude>
     <ClInclude Include="shape.h">
-      <Filter>boilerplate\entity\shape</Filter>
-    </ClInclude>
-    <ClInclude Include="cycloid.h">
-      <Filter>boilerplate\entity\shape</Filter>
-    </ClInclude>
-    <ClInclude Include="quad.h">
-      <Filter>boilerplate\entity\shape</Filter>
-    </ClInclude>
-    <ClInclude Include="heart.h">
-      <Filter>boilerplate\entity</Filter>
-    </ClInclude>
-    <ClInclude Include="tree.h">
-      <Filter>boilerplate\entity</Filter>
+      <Filter>framework\entity\shape</Filter>
     </ClInclude>
     <ClInclude Include="window.h">
-      <Filter>boilerplate\window</Filter>
+      <Filter>framework\window</Filter>
+    </ClInclude>
+    <ClInclude Include="quad.h">
+      <Filter>framework\entity\shape</Filter>
+    </ClInclude>
+    <ClInclude Include="vector.h">
+      <Filter>framework\utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
